[gd_scene load_steps=8 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://MagicSchoolTwo.ttf" type="DynamicFontData" id=2]

[sub_resource type="Theme" id=4]

[sub_resource type="Theme" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 15.0
margin_top = 182.0
margin_right = 268.0
margin_bottom = 256.0
rect_scale = Vector2( 1.80883, 1.92403 )
mouse_filter = 2
input_pass_on_modal_close_click = false
theme = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SinglePlayer" type="Button" parent="VBoxContainer"]
margin_right = 253.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( -96, 1329 )
theme = SubResource( 5 )
custom_fonts/font = SubResource( 1 )
action_mode = 0
button_mask = 0
text = "Single Player"

[node name="Multiplayer" type="Button" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 253.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( -96, 1329 )
custom_fonts/font = SubResource( 2 )
button_mask = 0
text = "Multiplayer"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 253.0
margin_bottom = 161.0
rect_pivot_offset = Vector2( -96, 1329 )
custom_fonts/font = SubResource( 3 )
button_mask = 0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/SinglePlayer" to="." method="_on_SinglePlayer_pressed"]
[connection signal="pressed" from="VBoxContainer/Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
